Adicionando segurança