@@ -20,6 +20,8 @@ import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -32,8 +34,13 @@ class BuscarTodosLocalUsecaseImplTest {
     @Mock
     private VisitaRepositoryPort visitaRepository;
 
+    @Mock
+    private SincronizarTagsDoLocalService sincronizarTagsDoLocalService;
+
     @InjectMocks
     private BuscarTodosLocalUsecaseImpl buscarTodosLocalUsecaseImpl;
+
+    private static final String OWNER_USER_ID = "owner-1";
 
     private Local localUm;
     private Local localDois;
@@ -45,14 +52,17 @@ class BuscarTodosLocalUsecaseImplTest {
         localUm = new Local();
         localUm.setId("id-local-1");
         localUm.setNome("Restaurante A");
+        localUm.setOwnerUserId(OWNER_USER_ID);
 
         localDois = new Local();
         localDois.setId("id-local-2");
         localDois.setNome("Restaurante B");
+        localDois.setOwnerUserId(OWNER_USER_ID);
 
         visitaUm = new Visita();
         visitaUm.setId("id-visita-1");
         visitaUm.setIdLocal("id-local-1");
+        visitaUm.setUserId(OWNER_USER_ID);
         visitaUm.setAvaliacao(5);
         visitaUm.setComentario("Excelente!");
         visitaUm.setDataVisita(LocalDate.of(2025, 1, 10));
@@ -60,9 +70,12 @@ class BuscarTodosLocalUsecaseImplTest {
         visitaDois = new Visita();
         visitaDois.setId("id-visita-2");
         visitaDois.setIdLocal("id-local-2");
+        visitaDois.setUserId(OWNER_USER_ID);
         visitaDois.setAvaliacao(4);
         visitaDois.setComentario("Muito bom!");
         visitaDois.setDataVisita(LocalDate.of(2025, 2, 15));
+
+        lenient().doNothing().when(sincronizarTagsDoLocalService).hidratarParaResposta(any(Local.class));
     }
 
     @Nested
@@ -72,11 +85,11 @@ class BuscarTodosLocalUsecaseImplTest {
         @Test
         @DisplayName("deve retornar todos os locais com suas visitas populadas quando existem locais cadastrados")
         void deveRetornarLocaisComVisitasPopuladasQuandoExistemLocais() {
-            when(localRepositoryPort.buscarTodosLocal()).thenReturn(List.of(localUm, localDois));
-            when(visitaRepository.buscarVisitasPorIdLocal("id-local-1")).thenReturn(List.of(visitaUm));
-            when(visitaRepository.buscarVisitasPorIdLocal("id-local-2")).thenReturn(List.of(visitaDois));
+            when(localRepositoryPort.buscarTodosLocalPorUsuario(OWNER_USER_ID)).thenReturn(List.of(localUm, localDois));
+            when(visitaRepository.buscarVisitasPorIdLocal("id-local-1", OWNER_USER_ID)).thenReturn(List.of(visitaUm));
+            when(visitaRepository.buscarVisitasPorIdLocal("id-local-2", OWNER_USER_ID)).thenReturn(List.of(visitaDois));
 
-            List<Local> resultado = buscarTodosLocalUsecaseImpl.execute();
+            List<Local> resultado = buscarTodosLocalUsecaseImpl.execute(OWNER_USER_ID);
 
             assertAll(
                     () -> assertNotNull(resultado),
@@ -87,20 +100,20 @@ class BuscarTodosLocalUsecaseImplTest {
                     () -> assertEquals("id-visita-2", resultado.get(1).getVisitas().get(0).getId())
             );
 
-            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-1");
-            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-2");
+            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-1", OWNER_USER_ID);
+            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-2", OWNER_USER_ID);
         }
 
         @Test
         @DisplayName("deve chamar buscarVisitasPorIdLocal com o id de cada local")
         void deveChamarBuscarVisitasPorIdLocalComIdCadaLocal() {
-            when(localRepositoryPort.buscarTodosLocal()).thenReturn(List.of(localUm, localDois));
-            when(visitaRepository.buscarVisitasPorIdLocal(anyString())).thenReturn(Collections.emptyList());
+            when(localRepositoryPort.buscarTodosLocalPorUsuario(OWNER_USER_ID)).thenReturn(List.of(localUm, localDois));
+            when(visitaRepository.buscarVisitasPorIdLocal(anyString(), eq(OWNER_USER_ID))).thenReturn(Collections.emptyList());
 
-            buscarTodosLocalUsecaseImpl.execute();
+            buscarTodosLocalUsecaseImpl.execute(OWNER_USER_ID);
 
-            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-1");
-            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-2");
+            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-1", OWNER_USER_ID);
+            verify(visitaRepository).buscarVisitasPorIdLocal("id-local-2", OWNER_USER_ID);
             verifyNoMoreInteractions(visitaRepository);
         }
     }
@@ -112,9 +125,9 @@ class BuscarTodosLocalUsecaseImplTest {
         @Test
         @DisplayName("deve retornar lista vazia quando não existem locais cadastrados")
         void deveRetornarListaVaziaQuandoNaoExistemLocais() {
-            when(localRepositoryPort.buscarTodosLocal()).thenReturn(Collections.emptyList());
+            when(localRepositoryPort.buscarTodosLocalPorUsuario(OWNER_USER_ID)).thenReturn(Collections.emptyList());
 
-            List<Local> resultado = buscarTodosLocalUsecaseImpl.execute();
+            List<Local> resultado = buscarTodosLocalUsecaseImpl.execute(OWNER_USER_ID);
 
             assertAll(
                     () -> assertNotNull(resultado),
@@ -131,12 +144,12 @@ class BuscarTodosLocalUsecaseImplTest {
         @Test
         @DisplayName("deve lançar BusinessException com INTERNAL_SERVER_ERROR quando buscarTodosLocal lança RuntimeException")
         void deveLancarBusinessExceptionQuandoBuscarTodosLocalFalha() {
-            when(localRepositoryPort.buscarTodosLocal())
+            when(localRepositoryPort.buscarTodosLocalPorUsuario(OWNER_USER_ID))
                     .thenThrow(new RuntimeException("Falha no banco de dados"));
 
             BusinessException excecao = assertThrows(
                     BusinessException.class,
-                    () -> buscarTodosLocalUsecaseImpl.execute()
+                    () -> buscarTodosLocalUsecaseImpl.execute(OWNER_USER_ID)
             );
 
             assertAll(
